--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/nunito": "^5.2.5",
+    "@fontsource/quicksand": "^5.2.7",
     "framer-motion": "^11.0.8",
     "lucide-react": "^0.344.0",
     "nodemailer": "^6.10.1",
