--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,7 @@
     "dev": "vite --host",
     "build": "vite build",
     "lint": "eslint .",
-    "postbuild": "node generate-sitemap.js",
+    "postbuild": "npx tsx generate-sitemap.ts",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -34,6 +34,7 @@
     "postcss": "^8.4.35",
     "sitemap": "^8.0.0",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.19.4",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
     "vite": "^5.4.2"
